--- a/Shop/Shop.Core/Shop.Core.csproj
+++ b/Shop/Shop.Core/Shop.Core.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Nancy" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dto\ServiceInterface\" />
   </ItemGroup>
 
 </Project>
